# agents-earth

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PHASE2_IMPLEMENTATION.md  README.md  colony.yaml  dashboard.html  eslint.config.js  index.html  package-lock.json  package.json  register.html  tsconfig.json
.github/workflows/: ci.yml  deploy.yml  desktop.yml
apps/bridge-desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/bridge-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/bridge-desktop/src-tauri/src/: bridge_ws.rs  main.rs  state.rs  tray.rs
apps/desktop/: package.json  tsconfig.json
apps/server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
colonies/: london.yml  tokyo.yml
css/: dashboard-page.css  register.css  style.css
docker/: nginx.conf  start.sh
docs/: ARCHITECTURE-V8.md  ARCHITECTURE-V9.md  DATA-MODELS-V9.md  DATA-MODELS.md  INTEGRATION.md  did-genz-spec.md
js/: agents.js  app.js  audio.js  colony.js  districts.js  globe.js  london.js  main.js  panels.js  simulation.js  sprites.js  ui.js
server/: index.js  package-lock.json  package.json  ws.js
server/data/: colony.db
server/db/: schema.js  seed.js
server/middleware/: auth.js  errors.js  rateLimit.js
server/routes/: agents.js  ambitions.js  artifacts.js  benchmarks.js  colonies.js  comms.js  constitution.js  districts.js  events.js  exploration.js  genships.js  governance.js  homes.js  library.js  milestones.js  space.js  stats.js  trade.js
(+136 files in other folders)
